Fix 2nd child font on mobile.

--- a/css/roadmap.css
+++ b/css/roadmap.css
@@ -444,4 +444,7 @@ Main components
     .cd-timeline-content h3 {
         font-size: 1.5rem;
     }
+    .cd-timeline-content h4 {
+        font-size: 1.25rem;
+    }
 }
